--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="grid-produtos">
                 <div class="card-produto">
                     <img 
-                        src="images/imag1.jpeg" 
+                        src="./imag1.jpeg" 
                         alt="Abridor de Lata Multifuncional"
                         data-nome="Abridor de Lata Multifuncional - Um brinde versátil com lâminas e abridor de garrafa!"
                         class="img-produto"
