--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="card-produto">
                     <img 
-                        src="images/img2.jpeg" 
+                        src="img2.jpeg" 
                         alt="Abridor Clássico"
                         data-nome="Abridor Clássico - Personalize com sua marca."
                         class="img-produto"
