--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="grid-produtos">
                 <div class="card-produto">
                     <img 
-                        src="images/img3.jpeg"
+                        src="./img3.jpeg"
                         alt="Chaveiro Metálico"
                         data-nome="Chaveiro Metálico - Ideal para presentes corporativos."
                         class="img-produto"
