--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="card-produto">
                     <img 
-                        src="images/img4.jpeg"
+                        src="./img4.jpeg"
                         alt="Chaveiro Acrílico"
                         data-nome="Chaveiro Acrílico - Leve sua marca para todo lugar!"
                         class="img-produto"
