Update index.html ("Abridores"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <h1>HUIÓS</h1>
             <nav>
-                <a href="#abridores">Abridors</a>
+                <a href="#abridores">Abridores</a>
                 <a href="#chaveiros">Chaveiros</a>
                 <a href="#copos">Copos Térmicos</a>
             </nav>
