--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HUIÓS - Catálogo de Brindes</title>
     <link rel="stylesheet" href="style.css">
 </head>
+    https://wa.me/5544991782603?text=MENSAGEM
 <body>
     <!-- Cabeçalho -->
     <header>
@@ -126,7 +127,11 @@
             <p>&copy; 2025 HUIÓS. Todos os direitos reservados.</p>
         </div>
     </footer>
+<button id="zap-catalogo">Chamar no WhatsApp</button>
 
     <script src="script.js"></script>
 </body>
 </html>
+   
+
+
