--- a/index.html
+++ b/index.html
@@ -128,8 +128,13 @@
         </div>
     </footer>
 <button id="zap-catalogo">Chamar no WhatsApp</button>
+<script>
+document.getElementById("zap-catalogo").onclick = function() {
+  window.open("https://wa.me/5544991782603?text=Olá! Tenho interesse no produto.", "_blank");
+}
+</script>
 
-    <script src="script.js"></script>
+
 </body>
 </html>
    
